syntax = "proto3";
package defundlabs.defund.broker;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/defund-labs/defund/x/broker/types";

message Pool {
    string pool_id = 1;
    string interquery_id = 2;
}

message Broker {
    string id = 1;
    string connection_id = 2 [(gogoproto.moretags) = "yaml:\"connection_id\""];
    repeated Pool pools = 3;
    cosmos.base.v1beta1.Coin baseDenom = 4;
}